scaffold/typescript-go-main/testdata/baselines/reference/submodule/compiler/amdLikeInputDeclarationEmit.errors.txt
ExtendedClass.js(17,5): error TS1231: An export assignment must be at the top level of a file or module declaration.


==== typing.d.ts (0 errors) ====
    declare function define<T=unknown>(name: string, modules: string[], ready: (...modules: unknown[]) => T);
==== deps/BaseClass.d.ts (0 errors) ====
    declare module "deps/BaseClass" {
        class BaseClass {
            static extends<A>(a: A): new () => A & BaseClass;
        }
        export = BaseClass;
    }
==== ExtendedClass.js (1 errors) ====
    define("lib/ExtendedClass", ["deps/BaseClass"], 
    /**
     * {typeof import("deps/BaseClass")}
     * @param  {typeof import("deps/BaseClass")} BaseClass 
     * @returns 
     */
    (BaseClass) => {    
        
        const ExtendedClass = BaseClass.extends({
            f: function() {
                return "something";
            }
        });
    
        // Exports the module in a way tsc recognize class export 
        const module = {};
        module.exports = ExtendedClass
        ~~~~~~
!!! error TS1231: An export assignment must be at the top level of a file or module declaration.
        return module.exports;
    });